# waap-mservice

./: .gitignore  .pre-commit-config.yaml  Makefile  config.py  constants.py  main.py  pyproject.toml
agents/: __init__.py  transformer.py
api/: __init__.py
api/routes/: chat.py  health.py  relay.py  upload.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: health.py  relay.py
app/core/: config.py
auth/: security.py
clients/: anthropic_client.py  redis_client.py
prompts/agents/: transformer.py
schemas/: chat.py
scripts/: transform_acne.sh  transform_test.sh
services/: chat_service.py  clintel_service.py  relay_service.py  upload_service.py
tests/: test_relay_transform.py
utils/: local_prompt_loader.py  prompt_manager.py
